[package]
name = "tauri-app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "= 1.2.0", features = ["api-all", "devtools", "macos-private-api", "updater"] }
rfd = "= 0.9.1"
df-excel = "0.1.2"
json = "0.12.4"
btleplug = "0.10.4"
lazy_static = "1.4.0"
rand = "0.8.5"
uuid = "1.2.2"
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
futures = "0.3.25"
serde_json = "1.0.89"
pretty_env_logger = "0.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
